Refactor chest-related classes and improve documentation for clarity